UX: fix misalignment for non-admin and anon + move to variable use (#349)

--- a/assets/stylesheets/solutions.scss
+++ b/assets/stylesheets/solutions.scss
@@ -1,4 +1,4 @@
-$solved-color: green;
+$solved-color: var(--success);
 
 .select-kit {
   &.solved-status-filter {
@@ -36,17 +36,12 @@ $solved-color: green;
 }
 
 .post-controls span.accepted-text {
-  padding: 8px 10px;
-  font-size: $font-up-1;
-
-  span {
-    display: inline-block;
-    padding: 8px 1px;
-  }
-
-  .accepted-label {
-    margin-left: 7px;
-  }
+  display: inline-flex;
+  align-items: center;
+  gap: 0.25em;
+  padding: 0 0.5rem;
+  font-size: var(--font-up-1);
+  height: 100%;
 }
 
 .mobile-view .solved-panel {
